<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">&appname;</string>
    <string name="package_driver" translatable="false">&driverbundle;</string>
    <string name="default_notification_channel_id" translatable="false">&channel_id;</string>
    <string name="google_maps_key" translatable="false">&googleMapKey;</string>
    <string name="google_key_url" translatable="false">&googleAutoCompleteKey;</string>
    <string name="google_client_id" translatable="false">&googleClientId;</string>
    <string name="real_time_db" translatable="false">&firebaseDbMode;</string>
    <string name="show_otp" translatable="false">&otpEnable;</string>
    <string name="show_copyright" translatable="false">&showcopyright;</string>
    <string name="base_url" translatable="false">&siteurl;api/</string>
    <string name="image_url" translatable="false">&siteurl;images/</string>
    <string name="privacy_policy" translatable="false">&siteurl;privacy_policy</string>
    <string name="terms" translatable="false">&siteurl;terms_of_service</string>
    <string name="appleCallback" translatable="false">&siteurl;api/apple_callback</string>
    <string name="whatsapp_url" translatable="false">https://api.whatsapp.com/send?phone=%s&amp;text=%s</string>
    <string name="use_in_case_of_emergency">Use In Case of emergency</string>
    <string name="getmoving">Get moving with &appname;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="connectsocila">Or connect with social</string>
    <string name="phonenumber">Phone Number</string>
    <string name="confirm_seat_msg">How Many Seats You Do Need?</string>
    <string name="chooseaccount">Choose an account</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="errormsg_paymnet_type">Please Choose Your Payment Type</string>
    <string name="payment_name">"&appname; Payment"</string>
    <string name="alert_your_emergency_contacts">Alert your Emergency Contacts</string>
    <string name="welcomeback">Welcome back, sign in to continue</string>
    <string name="forgotpassword">I forgot my password</string>
    <string name="resetpasswords">Reset your password</string>
    <string name="creatacount">Create an Account</string>
    <string name="soscontent">&appname; collects location data during an active booking from your device to ensure a safe and smooth ride experience</string>
    <string name="close">CLOSE</string>
    <string name="continue_alert">Continue</string>
    <string name="continue_to_send_alert">Continue to send alert?</string>
    <string name="sucessmessfe">Messege Sent Successfully</string>
    <string name="messagesenttoadmin">Message Successfully Sent to Admin</string>
    <string name="enteremailadress">Enter the email address you used to register</string>
    <string name="car_unavailable">"Unfortunately, &appname;
        is currently unavailable in your area."</string>
    <string name="email">EMAIL</string>
    <string name="cancel">Cancel</string>
    <string name="editaccount">Edit Account</string>
    <string name="textpayment">Payment</string>
    <string name="paypal_payment">PayPal</string>
    <string name="helptitle">Help</string>
    <string name="capacity">Capacity</string>
    <string name="fare">Fare</string>
    <string name="done">Done</string>
    <string name="continues">CONTINUE</string>
    <string name="pricepresented">Your fare will be the price presented before the trip or based on the rates below and other applicable surcharges and adjustments.</string>
    <string name="basefare">Base Fare</string>
    <string name="perminute">+ Per Minute</string>
    <string name="perkm">+ Per km</string>
    <string name="requestuber">"REQUEST "</string>
    <string name="amountno7">$53.00</string>
    <string name="ubergo">&appname;Go</string>
    <string name="cancel_your_trip">"Cancel Your Rider"</string>
    <string name="paymentmethods">Payment Methods</string>
    <string name="cash">Cash</string>
    <string name="wallets">Wallet</string>
    <string name="promotions">Promotions</string>
    <string name="add">Add</string>
    <string name="add_promo">Add Promo/Gift Code</string>
    <string name="free_trip">Free trip up to</string>
    <string name="from">from</string>
    <string name="off">OFF</string>
    <string name="promo_applied">Promo Applied</string>
    <string name="enter_promo_code">Enter your promo/gift code</string>
    <string name="wallet">My Wallet</string>
    <string name="use_wallet">Use Wallet</string>
    <string name="wallet_amount">Your Wallet Amount is</string>
    <string name="add_amount">Add Money</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="paid_amount">"Paid Amount"</string>
    <string name="enter_amount">Enter The Amount</string>
    <string name="add_money">"Add money to the wallet</string>
    <string name="pay">Pay</string>
    <string name="trip_id">Trip Id :</string>
    <string name="proceed">Proceed</string>
    <string name="waitfordriver">Waiting for driver confirmation</string>
    <string name="paypal">PayPal</string>
    <string name="credit_or_debit_card">Add Credit or Debit Card</string>
    <string name="change_credit_or_debit_card">Change Credit or Debit Card</string>
    <string name="card">Card</string>
    <string name="save">Save</string>
    <string name="baseFare">Base Fare</string>
    <string name="currency">"Currency"</string>
    <string name="selectcurrency">"Select Currency"</string>
    <string name="signOut">Sign Out</string>
    <string name="tripDetails">Trip Details</string>
    <string name="fordFiesta">Ford Fiesta</string>
    <string name="FordFiesta">Ford Fiesta</string>
    <string name="nameexamplecom" translatable="false">name@example.com</string>
    <string name="YourTrips">Your Trips</string>
    <string name="address">6,Elliots Promenade odaimanagar,Besant Nagar,Chennai,Tamil Nadu 600090,India</string>
    <string name="request_car_msg">"Contacting</string>
    <string name="request_car_msg1">" near you&#8230;</string>
    <string name="favorites">Favorites</string>
    <string name="addhome">Add Home</string>
    <string name="addwork">Add Work</string>
    <string name="home">"Home</string>
    <string name="work">"Work"</string>
    <string name="events">Events</string>
    <string name="signout_msg">"Are you sure you want to sign out?"</string>
    <string name="cancel_s">"Cancel"</string>
    <string name="signout">"Sign Out"</string>
    <string name="accountsetting">Account Settings</string>
    <string name="resend">Resend Code</string>
    <string name="affordable">Affordable,everyday rides</string>
    <string name="tripsreview">Trips and Fare Review</string>
    <string name="accountpayment">Account and Payment Options</string>
    <string name="guideuber">A Guide to &appname;</string>
    <string name="signingup">Signing Up</string>
    <string name="more">More</string>
    <string name="accessibility">Accessibility</string>
    <string name="additionaltopics">Additional topics</string>
    <string name="farebreakdown">Fare Breakdown</string>
    <string name="farediscribction">The fare will be the price presented upon booking, or, if the journey changes, the fare will be based on the rates provided.Tap fare for details.</string>
    <string name="profile">Profile</string>
    <string name="payment">Payment Modes</string>
    <string name="yourtrips">Trips History</string>
    <string name="begin_trip">"Begin Trip"</string>
    <string name="Rating">Rating</string>
    <string name="completed">Completed</string>
    <string name="Cancelled">Cancelled</string>
    <string name="end_trip">"End Trip"</string>
    <string name="scheduled">"Scheduled"</string>
    <string name="not_now">NOT NOW</string>
    <string name="camera_permission_description">To capture photos and videos, allow &appname; to access your camera and storage</string>
    <string name="storage_permission_description">To upload profile image &appname; to access your storage</string>
    <string name="location_permission_description">To request your ride, allow &appname; to access your device  location</string>
    <string name="audio_permission_description">To Connect phone call, allow &appname; to access your audio settings</string>
    <string name="contact_permission_description">To share your ride details, allow &appname; to access your contacts</string>
    <string name="settings">App Settings</string>
    <string name="drivewithuber">Drive With &driverAppName;</string>
    <string name="legal">Legal</string>
    <string name="whereto">Where to?</string>
    <string name="pickuplocation">"Pickup Location"</string>
    <string name="currentlocation">"Current Location"</string>
    <string name="setlocationonmap">"Set location on map"</string>
    <string name="scheduleride">"Schedule a Ride"</string>
    <string name="contact_C">"CONTACT"</string>
    <string name="contact">"Contact"</string>
    <string name="call">"Call"</string>
    <string name="callsonly">"CALLS ONLY"</string>
    <string name="support">"Support"</string>
    <string name="arrival">"1:51pm arrival"</string>
    <string name="sharestatus">"Share Status"</string>
    <string name="ratetext">"$79.76"</string>
    <string name="mastercard">"MasterCard 2930"</string>
    <string name="restaurantdelights">"Restaurant delights"</string>
    <string name="uberittowangs">"Uber it to Wangs"</string>
    <string name="enrote">"En Route"</string>
    <string name="mins">"mins"</string>
    <string name="min">"mins"</string>
    <string name="yourcurrenttrip">"Your current trip"</string>
    <string name="change">CHANGE</string>
    <string name="min_eta">&#160;Min</string>
    <string name="hr_eta">"&#160;hr&#160;"</string>
    <string name="notrip">"You have no trip"</string>
    <string name="whatisyourname">"What's your name?"</string>
    <string name="confirmyourinformation">"Confirm your information"</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="email_s">Email</string>
    <string name="password">Password</string>
    <string name="mobile_s">Mobile Number</string>
    <string name="sigin_terms1">"By continuing, I confirm that I have read and agree to the "</string>
    <string name="font_Medium" translatable="false">"ClanPro-Medium"</string>
    <string name="font_NarrMedium" translatable="false">"ClanPro-NarrMedium"</string>
    <string name="font_UBERMedium" translatable="false">"ClanProForUBER-Medium"</string>
    <string name="font_UBERNews" translatable="false">"ClanProForUBER-News"</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="ok_c">Ok</string>
    <string name="yourtripcancelledbydriver">Your trip cancelled by driver&#8230;</string>
    <string name="layout_direction" translatable="false">0</string>
    <string name="referral">My Referral</string>
    <string name="manual_booking">Manual Booking</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="covid_feature_title">Travel Only If You Are Asymptomatic.</string>
    <string name="covid_desc_1">Make The Ride Comfortable By Following The Safety Regulations To Keep You and Your Driver Safe!!</string>
    <string name="covid_desc_2">Always wear a mask and maintain social distance..</string>
    <string name="covid_desc_3">Regularly Wear Face Cover and Sanitise your Hands Before And After the Rides.</string>
    <string name="covid_desc_4">Don’t take a ride if you have Covid-19 or related symptoms.</string>
    <string name="covid_desc_5">Be Safe and Stay Healthy!!!</string>
    <string name="privacy_policy_txt">Privacy Policy</string>
</resources>