<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_curve_button_white"
        android:layoutDirection="@string/layout_direction"
        >


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10adp"
            android:paddingEnd="@dimen/_10adp"
            android:layoutDirection="@string/layout_direction"
            >

        <com.rideke.user.common.custompalette.FontTextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingStart="@dimen/_20adp"
                android:paddingEnd="20dp"
                android:text="@string/yourtripcancelledbydriver"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/app_primary_text"
                android:textSize="@dimen/_17asp"
                app:fontName="@string/font_Medium"
                />

        <com.rideke.user.common.custompalette.FontButton
                android:id="@+id/ok_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/message"
                android:layout_below="@+id/message"
                android:textColor="@color/app_primary_text"
                android:layout_marginBottom="10dp"
                android:background="@color/transparent"
                android:text="@string/ok_c"
                app:fontName="@string/font_UBERNews" />
    </RelativeLayout>
</RelativeLayout>

