<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layoutDirection="@string/layout_direction"
        android:orientation="vertical"
        >

    <com.rideke.user.common.custompalette.FontTextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/signout_msg"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_16asp"
            app:fontName="@string/font_Medium"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/d_topbordor"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:showDividers="middle"
            android:weightSum="2"
            >

        <com.rideke.user.common.custompalette.FontTextView
                android:id="@+id/signout_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/_15adp"
                android:paddingBottom="@dimen/_15adp"
                android:text="@string/cancel_s"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14asp"
                app:fontName="@string/font_Medium"
                />

        <com.rideke.user.common.custompalette.FontTextView
                android:id="@+id/signout_signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/_15adp"
                android:paddingBottom="@dimen/_15adp"
                android:text="@string/signout"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14asp"
                app:fontName="@string/font_Medium"
                />
    </LinearLayout>

</LinearLayout>