<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="@string/layout_direction"
        android:orientation="vertical">

    <com.rideke.user.common.custompalette.FontTextView
            android:id="@+id/listempty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20adp"
            android:text="@string/notrip"
            android:textAlignment="center"
            android:textColor="@color/app_primary_text"
            android:textSize="@dimen/_15asp"
            android:visibility="gone"
            app:fontName="@string/font_UBERMedium" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeToRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:padding="@dimen/_15adp"
                android:scrollbars="none" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>