<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_top_curve_white"
        android:layout_alignParentBottom="true">


        <com.rideke.user.common.custompalette.FontEditText
                android:id="@+id/input_promo_code"
                android:textAlignment="viewStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_promo_code"
                android:textCursorDrawable="@drawable/app_cursor_color"
                android:singleLine="true"
                android:textColor="@color/app_primary_text"
                android:textSize="@dimen/_15asp"
                android:padding="@dimen/_15adp"
                app:fontName="@string/font_Medium"
                android:layout_marginStart="@dimen/_40adp"
                android:layout_marginTop="@dimen/_20adp"
                android:layout_marginEnd="@dimen/_40adp"
                android:background="@drawable/app_curve_button_white_with_outline"
                />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_promo_code"
            android:layout_marginStart="@dimen/_40adp"
            android:layout_marginTop="@dimen/_20adp"
            android:layout_marginEnd="@dimen/_40adp"
            android:layout_marginBottom="@dimen/_20adp"
            android:orientation="horizontal"
            android:weightSum="2"
            >

        <com.rideke.user.common.custompalette.FontButton
                android:id="@+id/cancel_promo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10adp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/_5adp"
                android:background="@drawable/app_curve_button_white_with_outline"
                android:text="@string/cancel"
                android:textColor="@color/app_primary_text"
                android:textSize="@dimen/_15asp"
                android:padding="@dimen/_15adp"
                app:fontName="@string/font_Medium"
                />

        <com.rideke.user.common.custompalette.FontButton
                android:id="@+id/add_promo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5adp"
                android:layout_weight="1"
                android:background="@drawable/app_curve_button_yellow"
                android:text="@string/add"
                android:layout_marginBottom="@dimen/_5adp"
                android:padding="@dimen/_15adp"
                android:textColor="@color/app_primary_button_text_color"
                android:textSize="@dimen/_15asp"
                app:fontName="@string/font_Medium"
                />
    </LinearLayout>
</RelativeLayout>